--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ extras =
     data
     jupyter
 usedevelop=True
+skip_install = True
 setenv =
     PYTHONPATH = {toxinidir}/demos
 commands =
@@ -41,6 +42,7 @@ extras =
     data
     jupyter
 usedevelop=True
+skip_install = True
 deps =
     uv
 commands =
@@ -69,6 +71,7 @@ extras =
     data
     jupyter
 usedevelop=True
+skip_install = True
 deps =
     uv
 commands =
@@ -93,6 +96,7 @@ allowlist_externals =
 
 [testenv:dockertests]
 usedevelop=True
+skip_install = True
 deps =
     uv
 setenv =
@@ -107,6 +111,7 @@ allowlist_externals =
 
 [testenv:style]
 usedevelop=True
+skip_install = True
 deps =
     uv
 commands =
@@ -120,6 +125,7 @@ allowlist_externals =
 
 [testenv:docs]
 usedevelop=True
+skip_install = True
 deps =
     uv
 allowlist_externals =
