--- a/tox.ini
+++ b/tox.ini
@@ -14,10 +14,10 @@ commands =
     find . -type f -name "*.py[c|o]" -delete
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
     uv run sh -c "cd demos && uv add --editable . && cd .."
-    uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
-    uv run coverage combine
-    uv run coverage report
-    uv run coverage xml
+    uv run --active coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
+    uv run --active coverage combine
+    uv run --active coverage report
+    uv run --active coverage xml
 passenv =
     CI
     DATABASE_URL
@@ -48,7 +48,7 @@ deps =
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
     uv run sh -c "cd demos && uv add --editable . && cd .."
-    uv run pytest {posargs}
+    uv run --active pytest {posargs}
 passenv =
     CI
     DATABASE_URL
@@ -77,7 +77,7 @@ deps =
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
     uv run sh -c "cd demos && uv add --editable . && cd .."
-    uv run pytest {posargs} --mturkfull --runslow
+    uv run --active pytest {posargs} --mturkfull --runslow
 passenv =
     CI
     DATABASE_URL
@@ -103,7 +103,7 @@ setenv =
     RUN_DOCKER = 1
 commands =
     uv sync --frozen --extra dev --extra data --extra docker
-    uv run pytest {posargs} -m docker --runslow --chrome-headless -s
+    uv run --active pytest {posargs} -m docker --runslow --chrome-headless -s
 passenv =
     CI
 allowlist_externals =
@@ -116,8 +116,8 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev
-    uv run flake8
-    uv run black --check dallinger dallinger_scripts demos tests
+    uv run --active flake8
+    uv run --active black --check dallinger dallinger_scripts demos tests
 passenv =
     CI
 allowlist_externals =
