--- a/tox.ini
+++ b/tox.ini
@@ -102,7 +102,7 @@ deps =
 setenv =
     RUN_DOCKER = 1
 commands =
-    uv sync --frozen --extra dev --extra data --extra docker
+    uv sync --frozen --extra dev --extra data --extra docker --active
     uv run --active pytest {posargs} -m docker --runslow --chrome-headless -s
 passenv =
     CI
@@ -116,8 +116,8 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev
-    uv run --active flake8
-    uv run --active black --check dallinger dallinger_scripts demos tests
+    uv run flake8
+    uv run black --check dallinger dallinger_scripts demos tests
 passenv =
     CI
 allowlist_externals =
