--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
 commands =
     find . -type f -name "*.py[c|o]" -delete
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
-    uv run sh -c "cd demos && uv add --editable . && cd .."
+    uv pip install -e demos/
     uv run --active coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     uv run --active coverage combine
     uv run --active coverage report
@@ -47,7 +47,7 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
-    uv run sh -c "cd demos && uv add --editable . && cd .."
+    uv pip install -e demos/
     uv run --active pytest {posargs}
 passenv =
     CI
@@ -76,7 +76,7 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
-    uv run sh -c "cd demos && uv add --editable . && cd .."
+    uv pip install -e demos/
     uv run --active pytest {posargs} --mturkfull --runslow
 passenv =
     CI
