--- a/demos/dlgr/demos/chatroom_ws/pyproject.toml
+++ b/demos/dlgr/demos/chatroom_ws/pyproject.toml
@@ -5,4 +5,5 @@ description = "Dallinger demo experiment: chatroom_ws"
 requires-python = ">=3.10"
 dependencies = [
     "dallinger",
+    "nltk",
 ]
